--- a/css/styles.css
+++ b/css/styles.css
@@ -1710,7 +1710,7 @@ section + section {
   height: 22px;
   background-color: #f26522;
   color: #fff;
-  font-family: Roboto;
+  font-family: Montserrat;
   font-size: 14px;
   font-weight: 400;
   display: flex;
@@ -1720,6 +1720,9 @@ section + section {
 
 .call_menu_btn {
   top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media all and (max-width: 1400px) {
@@ -1738,6 +1741,26 @@ section + section {
   width: 26px;
   height: 17px;
   background: url("../img/burdge_icon_hover.svg") no-repeat center/contain;
+}
+
+.call_menu_btn svg {
+  display: none;
+}
+
+.call_menu_btn.active:before, .call_menu_btn.active:after {
+  display: none !important;
+}
+
+.call_menu_btn.active svg {
+  width: 17px;
+  display: block;
+  fill: #fff;
+  transition: fill 180ms;
+}
+
+.call_menu_btn.active:hover svg {
+  fill: #0e294a;
+  transition: fill 180ms;
 }
 
 .call_cabinet {
@@ -1838,6 +1861,11 @@ menu {
 .menu_link {
   height: 65px;
   padding: 0 20px;
+  color: #fff;
+  font-family: "Lapsus Pro";
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
   background-color: transparent;
   transition: background-color 180ms;
 }
@@ -1848,9 +1876,20 @@ menu {
   }
 }
 
+@media all and (max-width: 1300px) {
+  .menu_link {
+    font-size: 14px;
+  }
+}
+
 .menu_link:hover, .menu_link.active {
   background-color: transparent;
   background-color: #f26522;
+}
+
+.menu_link:hover .counter, .menu_link.active .counter {
+  transition: background-color 180ms;
+  background-color: #0e294a;
 }
 
 .menu_link .cat {
@@ -1878,21 +1917,29 @@ menu {
 
 .menu_link span {
   flex: 1 1 auto;
-  color: #fff;
-  font-family: "Lapsus Pro";
-  font-size: 16px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-@media all and (max-width: 1300px) {
-  .menu_link span {
-    font-size: 14px;
-  }
 }
 
 .menu_link + .menu_link {
   margin-top: 15px;
+}
+
+.menu_link .counter {
+  margin-left: 20px;
+  border-radius: 50%;
+  position: absolute;
+  top: 20px;
+  left: 155px;
+  width: 22px;
+  height: 22px;
+  background-color: #f26522;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 180ms;
 }
 
 .bottom_links {
@@ -3485,5 +3532,61 @@ menu {
 
 .cart_wrap .total_price span::after {
   content: " ₴";
+}
+
+.second_nav {
+  z-index: 9;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 318px;
+  box-shadow: 3px 0 15px rgba(14, 41, 74, 0.2);
+  background: url("../img/menu_bg.jpg") no-repeat center/cover;
+  transform: translate(100%);
+  transition: transform 180ms ease-in-out;
+  padding-top: 200px;
+  overflow: auto;
+  padding-bottom: 100px;
+}
+
+@media all and (max-width: 1000px) {
+  .second_nav {
+    width: 100%;
+    padding-top: 30px;
+  }
+}
+
+.second_nav::-webkit-scrollbar {
+  width: 5px;
+}
+
+.second_nav::-webkit-scrollbar-thumb {
+  background: #999;
+  border-radius: 5px;
+}
+
+.second_nav.active {
+  transform: translate(0);
+  transition: transform 180ms ease-in-out;
+}
+
+.second_nav .menu_link {
+  display: block;
+  height: 65px;
+  align-items: center;
+  line-height: 65px;
+}
+
+@media all and (max-width: 767px) {
+  .second_nav .menu_link {
+    padding: 0 30px;
+  }
+}
+
+.second_nav .main_link {
+  width: 80px;
+  margin-left: 30px;
+  margin-bottom: 50px;
 }
 /*# sourceMappingURL=styles.css.map */
