--- a/css/styles.scss
+++ b/css/styles.scss
@@ -258,7 +258,7 @@ section {
     height: 22px;
     background-color: #f26522;
     color: #fff;
-    font-family: Roboto;
+    font-family: Montserrat;
     font-size: 14px;
     font-weight: 400;
     display: flex;
@@ -269,6 +269,9 @@ section {
 
 .call_menu_btn {
   top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   @media all and (max-width: 1400px) {
     top: 30px;
@@ -284,6 +287,31 @@ section {
     width: 26px;
     height: 17px;
     background: url("../img/burdge_icon_hover.svg") no-repeat center / contain;
+  }
+
+  svg {
+    display: none;
+  }
+
+  &.active {
+    &:before,
+    &:after {
+      display: none !important;
+    }
+
+    svg {
+      width: 17px;
+      display: block;
+      fill: #fff;
+      transition: fill 180ms;
+    }
+
+    &:hover {
+      svg {
+        fill: #0e294a;
+        transition: fill 180ms;
+      }
+    }
   }
 }
 
@@ -384,6 +412,11 @@ menu {
 .menu_link {
   height: 65px;
   padding: 0 20px;
+  color: #fff;
+  font-family: "Lapsus Pro";
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
   background-color: transparent;
   transition: background-color 180ms;
 
@@ -391,10 +424,19 @@ menu {
     padding: 0 10px;
   }
 
+  @media all and (max-width: 1300px) {
+    font-size: 14px;
+  }
+
   &:hover,
   &.active {
     background-color: transparent;
     background-color: #f26522;
+
+    .counter {
+      transition: background-color 180ms;
+      background-color: #0e294a;
+    }
   }
 
   .cat {
@@ -420,19 +462,29 @@ menu {
 
   span {
     flex: 1 1 auto;
-    color: #fff;
-    font-family: "Lapsus Pro";
-    font-size: 16px;
-    font-weight: 700;
-    text-transform: uppercase;
-
-    @media all and (max-width: 1300px) {
-      font-size: 14px;
-    }
   }
 
   & + .menu_link {
     margin-top: 15px;
+  }
+
+  .counter {
+    margin-left: 20px;
+    border-radius: 50%;
+    position: absolute;
+    top: 20px;
+    left: 155px;
+    width: 22px;
+    height: 22px;
+    background-color: #f26522;
+    color: #fff;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 180ms;
   }
 }
 
@@ -1914,3 +1966,57 @@ menu {
   }
 }
 // cart end
+
+// second_nav
+.second_nav {
+  z-index: 9;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 318px;
+  box-shadow: 3px 0 15px rgba(14, 41, 74, 0.2);
+  background: url("../img/menu_bg.jpg") no-repeat center / cover;
+  transform: translate(100%);
+  transition: transform 180ms ease-in-out;
+  padding-top: 200px;
+  overflow: auto;
+  padding-bottom: 100px;
+
+  @media all and (max-width: 1000px) {
+    width: 100%;
+    padding-top: 30px;
+  }
+
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #999;
+    border-radius: 5px;
+  }
+
+  &.active {
+    transform: translate(0);
+    transition: transform 180ms ease-in-out;
+  }
+
+  .menu_link {
+    display: block;
+    height: 65px;
+    align-items: center;
+    line-height: 65px;
+
+    @media all and (max-width: 767px) {
+      padding: 0 30px;
+    }
+  }
+
+  .main_link {
+    width: 80px;
+    margin-left: 30px;
+    margin-bottom: 50px;
+  }
+}
+// second_nav end
