--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1518,6 +1518,34 @@ menu {
   }
 }
 
+.show_more_wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+
+  .show_more_btn {
+    color: #0e294a;
+    font-family: "Lapsus Pro";
+    font-size: 25px;
+    font-weight: 700;
+    letter-spacing: 1.25px;
+    text-decoration: underline;
+
+    &:hover {
+      text-decoration: none;
+    }
+
+    @media all and (max-width: 767px) {
+      font-size: 16px;
+      letter-spacing: 0.8px;
+    }
+  }
+}
+
+// main page
+
 // cart start
 .cart_wrap {
   position: fixed;
@@ -2020,3 +2048,33 @@ menu {
   }
 }
 // second_nav end
+
+// pagination start
+.pagination_wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Lapsus Pro";
+  font-size: 40px;
+  font-weight: 700;
+  grid-gap: 30px;
+
+  .nav {
+    font-size: 32px;
+  }
+
+  a {
+    color: #0e294a;
+    transition: color 180ms;
+
+    &:hover,
+    &.active {
+      color: #f26522;
+      transition: color 180ms;
+    }
+  }
+}
+// pagination end
+
+// feedback start
+// feedback end
